--- a/po/da_DK/queue.po
+++ b/po/da_DK/queue.po
@@ -1,22 +1,21 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Aputsiaĸ Niels Janussen <aputtu@gmail.com>, 2012.
+# Aputsiaĸ Niels Janussen <aj@isit.gl>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2012-07-24 23:35+0000\n"
-"Last-Translator: Aputsiaĸ Niels Janussen <aputtu@gmail.com>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/civicrm/language/da/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
@@ -37,3 +36,7 @@ msgstr "Sæt element-data i kø"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Kø-afvikler"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
