po: update po/da_DK/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/da_DK/pcp.po
+++ b/po/da_DK/pcp.po
@@ -9,8 +9,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:06+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Danish (http://www.transifex.com/civicrm/civicrm/language/da/)\n"
 "MIME-Version: 1.0\n"
@@ -35,6 +35,10 @@ msgstr "Redigér din side"
 msgid "Tell Friends"
 msgstr "Fortæl dine venner"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "URL til denne side"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Opdatér kontaktinformation"
@@ -48,8 +52,8 @@ msgid "Approval required"
 msgstr "Der kræves godkendelse"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Supporter-profil"
+msgid "Owner Email Notification"
+msgstr "E-mailnotifikation til ejer"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -69,14 +73,14 @@ msgstr "Henvisningstekst for 'Opret personlig kampagneside'"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
 msgstr "Denne tilmelding til arrangement sker med tak for indsatsen fra <strong>%1</strong>, der støtter vores kampagne."
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
 msgstr "Dette bidrag bliver givet med tak for indsatsen fra <strong>%1</strong>, der støtter vores kampagne."
 
 #: CRM/PCP/BAO/PCP.php
@@ -153,6 +157,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "Supporter-profil er ikke angivet for denne personlige kampagneside eller profilen er deaktiveret. Kontakt venligst stedets administrator, hvis du har brug for assistance."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr "Notifikation til ejer er ikke angivet for denne personlige kampagneside. Kontakt venligst stedets administrator, hvis du har brug for assistance."
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "ID for personlig kampagneside"
@@ -187,6 +197,10 @@ msgid "Target Entity Type"
 msgstr "Enhedstype for mål"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr "Notifikation til ejer"
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "Fortælven-grænse"
 
@@ -201,6 +215,10 @@ msgstr "Opsæt en personlig kampagneside - trin 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Redigér din personlige kampagneside"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -235,26 +253,16 @@ msgid "Honor Roll"
 msgstr "Rulleliste med anerkendelser"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "Notificér mig via e-mail når nogen donerer til min side"
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "Målsætning for beløb bør være en talværdi større end nul."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Tekst til knap skal være mindre end 64 tegn."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "Størrelsen på dit billede eller billedfil må ikke være større end 360 x 360 billedpunkter."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "Dimensionerne på billedet du har valgt er %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Formindsk eller beskær filen eller find et andet billede, der er mindre og forsøg igen."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -360,10 +368,6 @@ msgstr "Siden blev aktiveret"
 msgid "Source Type"
 msgstr "Kildetype"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Arrangmentsside"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -438,6 +442,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Send e-mail som inviterer dine venner til at støtte din kampagne!"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Kopiér denne henvisning, så du kan dele din direkte med dit netværk!"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Opdatér din personlige kontaktinformation"
 
@@ -477,9 +485,15 @@ msgstr "Teksten til bidrags- eller tilmeldingsknappen."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Hvis denne valgmulighed er afkrydset, så vil en \"rulleliste med anerkendelser\" blive vist med navnene (eller kaldenavnene) på de personer som har støttet din kampagne. (Man vil få muligheden for at forblive anonym. Deres navn vil IKKE blive vist.)"
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "Hvis denne valgmulighed er afkrydset, så vil en \"rulleliste med anerkendelser\" blive vist med navnene (eller kaldenavnene) på de personer som har støttet din kampagne. (De som donerer har mulighed for at forblive anonyme. Deres navne vil IKKE blive vist.)"
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr "Hvis dette tilvalg er markeret, så vil du modtaget e-mailnotifikationer når personer bidrager til din kampagne."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -489,10 +503,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Når personlige kampagnesider er aktiveret, så vil interessenter se en henvisning som inviterer dem til at oprette deres egen indsamlingsside efter at have ydet bidrag.  Bidrag fra personer, der er kommet gennem en personlig kampagneside, registreres som \"bløde kreditter\" for supporteren som oprette kampagnesiden."
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr ""
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -728,6 +738,38 @@ msgstr "Vis side"
 msgid "Linked to Contribution Page"
 msgstr "Henviser til bidragsside"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "Du har modtaget en donation gennem din personlige side"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr "Summen af din indsamling er blevet opdateret."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "Informationer om donatoren vises nedenfor. Du kan vælge at kontakte dem og overbringe din tak, hvis du ønsker."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr "Donatorens navn er blevet tilføjet til din hædersliste, medmindre de har anmodet om ikke at blive inkluderet."
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "En person har netop doneret til din personlige kampagneside"
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr "Notifikation til ejer af personlig kampagneside"
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -760,9 +802,9 @@ msgstr "Gå til din side"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "Når du ser deres kampagneside MENS DU ER LOGGET IND, så inkluderer siden henvisninger\ntil redigering af din side, fortæl venner, samt opdatering af dine kontaktinfo."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr "Når du ser deres kampagneside MENS DU ER LOGGET IND, så rummer siden henvisninger\ntil at redigere din side, fortæl videre venner, samt opdatere af dine kontaktinfo."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -780,8 +822,9 @@ msgstr "Spørgsmål? Send e-mail til"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
 msgstr "Din personlige kampagneside er blevet gennemgået. Der er enkelte ting i indholdet,\nder forhindrer os i at godkende siden. Vi beklager ulejligheden."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
@@ -877,102 +920,42 @@ msgstr "Klik eller indsæt denne henvising i din browser og følg prompterne"
 msgid "Click or paste this link into your browser"
 msgstr "Klik eller indsæt denne henvisning i din browser"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "URL til denne side"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
+msgstr ""
 
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Kopiér denne henvisning, så du kan dele din direkte med dit netværk!"
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Hvis denne valgmulighed er afkrydset, så vil en \"rulleliste med anerkendelser\" blive vist med navnene (eller kaldenavnene) på de personer som har støttet din kampagne. (De som donerer har mulighed for at forblive anonyme. Deres navne vil IKKE blive vist.)"
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr "E-mailnotifikation til ejer"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Denne tilmelding til arrangement sker med tak for indsatsen fra <strong>%1</strong>, der støtter vores kampagne."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Dette bidrag bliver givet med tak for indsatsen fra <strong>%1</strong>, der støtter vores kampagne."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
-msgstr "Notifikation til ejer er ikke angivet for denne personlige kampagneside. Kontakt venligst stedets administrator, hvis du har brug for assistance."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
+msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
-msgstr "Notifikation til ejer"
+msgid "PCP Block ID"
+msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "Notificér mig via e-mail når nogen donerer til min side"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr "Hvis dette tilvalg er markeret, så vil du modtaget e-mailnotifikationer når personer bidrager til din kampagne."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "Du har modtaget en donation gennem din personlige side"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr "Summen af din indsamling er blevet opdateret."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "Informationer om donatoren vises nedenfor. Du kan vælge at kontakte dem og overbringe din tak, hvis du ønsker."
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr "Donatorens navn er blevet tilføjet til din hædersliste, medmindre de har anmodet om ikke at blive inkluderet."
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "En person har netop doneret til din personlige kampagneside"
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr "Notifikation til ejer af personlig kampagneside"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr "Når du ser deres kampagneside MENS DU ER LOGGET IND, så rummer siden henvisninger\ntil at redigere din side, fortæl videre venner, samt opdatere af dine kontaktinfo."
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
-msgstr "Din personlige kampagneside er blevet gennemgået. Der er enkelte ting i indholdet,\nder forhindrer os i at godkende siden. Vi beklager ulejligheden."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
+msgstr ""
